--- a/MusicApp/Storyboards/Base.lproj/Main.storyboard
+++ b/MusicApp/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Albums-->
         <scene sceneID="Yhj-sc-081">
             <objects>
-                <viewController id="KYg-Ym-UGT" customClass="ViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="KYg-Ym-UGT" customClass="AlbumViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q65-ZZ-Esl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -74,109 +74,105 @@
             </objects>
             <point key="canvasLocation" x="1821.7391304347827" y="134.59821428571428"/>
         </scene>
-        <!--Collection View Controller-->
-        <scene sceneID="kz5-jZ-h9t">
-            <objects>
-                <collectionViewController id="82M-EY-Heb" customClass="CollectionViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="jGB-Ek-3F9">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gV2-DU-8y2">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="Wzw-5h-I7k" customClass="AlbumCell" customModule="MusicApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ECc-bi-MeN">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TvO-Ev-cRy">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        </imageView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="TvO-Ev-cRy" secondAttribute="trailing" id="aGa-Tg-Ml5"/>
-                                        <constraint firstItem="TvO-Ev-cRy" firstAttribute="top" secondItem="ECc-bi-MeN" secondAttribute="top" id="sv5-eA-n1U"/>
-                                        <constraint firstItem="TvO-Ev-cRy" firstAttribute="leading" secondItem="ECc-bi-MeN" secondAttribute="leading" id="ya0-ae-wQk"/>
-                                        <constraint firstAttribute="bottom" secondItem="TvO-Ev-cRy" secondAttribute="bottom" id="z2C-2I-As2"/>
-                                    </constraints>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="82M-EY-Heb" id="29y-nJ-LlZ"/>
-                            <outlet property="delegate" destination="82M-EY-Heb" id="yvl-6O-7XV"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6I0-Gq-9Nm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-51" y="679"/>
-        </scene>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="up4-1v-ceB">
             <objects>
-                <viewController id="OP5-yH-yKn" sceneMemberID="viewController">
+                <viewController id="OP5-yH-yKn" customClass="DetailsViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xrZ-Ce-Fok">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLm-Mg-ZoN">
-                                <rect key="frame" x="30" y="69" width="354" height="253"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLm-Mg-ZoN">
+                                <rect key="frame" x="70" y="68.5" width="274" height="253"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="253" id="jde-T2-E25"/>
+                                    <constraint firstAttribute="height" constant="253" id="Qx7-ou-TBP"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImW-wE-alm">
-                                <rect key="frame" x="186" y="20" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImW-wE-alm">
+                                <rect key="frame" x="16" y="20" width="382" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4d-1p-upK">
-                                <rect key="frame" x="186" y="362" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4d-1p-upK">
+                                <rect key="frame" x="5" y="361.5" width="389" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Iwb-qb-CS2">
-                                <rect key="frame" x="0.0" y="391" width="414" height="417"/>
+                                <rect key="frame" x="0.0" y="390.5" width="414" height="417.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="46d-tM-NAG">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackCell" rowHeight="54" id="46d-tM-NAG" customClass="TrackCell" customModule="MusicApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="54"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="46d-tM-NAG" id="DRC-9g-WeH">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="54"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L1z-98-lh4">
+                                                    <rect key="frame" x="1" y="2" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="NZ8-Jk-KKk"/>
+                                                        <constraint firstAttribute="width" constant="50" id="USA-kz-RJ4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4p5-tn-Pbg">
+                                                    <rect key="frame" x="56" y="18" width="336" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="336" id="1BF-Tq-ARb"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4p5-tn-Pbg" firstAttribute="leading" secondItem="L1z-98-lh4" secondAttribute="trailing" constant="5" id="30y-Gs-c6c"/>
+                                                <constraint firstAttribute="bottom" secondItem="L1z-98-lh4" secondAttribute="bottom" constant="2" id="KrW-8U-6mW"/>
+                                                <constraint firstItem="L1z-98-lh4" firstAttribute="leading" secondItem="DRC-9g-WeH" secondAttribute="leading" constant="1" id="bj3-Rx-Gfi"/>
+                                                <constraint firstItem="L1z-98-lh4" firstAttribute="top" secondItem="DRC-9g-WeH" secondAttribute="top" constant="2" id="dr0-eQ-cHu"/>
+                                                <constraint firstItem="4p5-tn-Pbg" firstAttribute="centerY" secondItem="DRC-9g-WeH" secondAttribute="centerY" id="vnd-99-2uq"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="albumImage" destination="L1z-98-lh4" id="pUB-Bg-Orf"/>
+                                            <outlet property="trackNameLabel" destination="4p5-tn-Pbg" id="pQw-In-HOl"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="OP5-yH-yKn" id="OoM-ms-9HY"/>
+                                    <outlet property="delegate" destination="OP5-yH-yKn" id="GVK-iD-Ked"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="KwE-1X-5v1" firstAttribute="trailing" secondItem="ImW-wE-alm" secondAttribute="trailing" constant="16" id="1aY-PJ-uEq"/>
                             <constraint firstItem="ImW-wE-alm" firstAttribute="top" secondItem="KwE-1X-5v1" secondAttribute="top" constant="20" id="4zK-Os-Qs1"/>
                             <constraint firstItem="Iwb-qb-CS2" firstAttribute="top" secondItem="X4d-1p-upK" secondAttribute="bottom" constant="8" id="6HU-92-ecr"/>
+                            <constraint firstItem="ImW-wE-alm" firstAttribute="leading" secondItem="KwE-1X-5v1" secondAttribute="leading" constant="16" id="7gd-ba-zxQ"/>
                             <constraint firstItem="X4d-1p-upK" firstAttribute="top" secondItem="rLm-Mg-ZoN" secondAttribute="bottom" constant="40" id="BC1-SD-G99"/>
                             <constraint firstItem="Iwb-qb-CS2" firstAttribute="trailing" secondItem="KwE-1X-5v1" secondAttribute="trailing" id="I5X-aU-Vyy"/>
                             <constraint firstItem="Iwb-qb-CS2" firstAttribute="bottom" secondItem="KwE-1X-5v1" secondAttribute="bottom" id="UtB-dg-4Q7"/>
-                            <constraint firstItem="KwE-1X-5v1" firstAttribute="trailing" secondItem="rLm-Mg-ZoN" secondAttribute="trailing" constant="30" id="amL-yg-OR1"/>
-                            <constraint firstItem="ImW-wE-alm" firstAttribute="centerX" secondItem="xrZ-Ce-Fok" secondAttribute="centerX" id="bt8-yY-oGm"/>
-                            <constraint firstItem="X4d-1p-upK" firstAttribute="centerX" secondItem="xrZ-Ce-Fok" secondAttribute="centerX" id="dt4-0R-fuW"/>
+                            <constraint firstItem="KwE-1X-5v1" firstAttribute="trailing" secondItem="X4d-1p-upK" secondAttribute="trailing" constant="20" id="VnZ-yv-p0r"/>
+                            <constraint firstItem="KwE-1X-5v1" firstAttribute="trailing" secondItem="rLm-Mg-ZoN" secondAttribute="trailing" constant="70" id="amL-yg-OR1"/>
+                            <constraint firstItem="X4d-1p-upK" firstAttribute="leading" secondItem="KwE-1X-5v1" secondAttribute="leading" constant="5" id="fS9-bX-U34"/>
                             <constraint firstItem="Iwb-qb-CS2" firstAttribute="leading" secondItem="KwE-1X-5v1" secondAttribute="leading" id="g8h-Om-Ajn"/>
-                            <constraint firstItem="rLm-Mg-ZoN" firstAttribute="leading" secondItem="KwE-1X-5v1" secondAttribute="leading" constant="30" id="qXf-L5-Ibm"/>
+                            <constraint firstItem="rLm-Mg-ZoN" firstAttribute="leading" secondItem="KwE-1X-5v1" secondAttribute="leading" constant="70" id="qXf-L5-Ibm"/>
                             <constraint firstItem="rLm-Mg-ZoN" firstAttribute="top" secondItem="ImW-wE-alm" secondAttribute="bottom" constant="28" id="xMf-sL-bBs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KwE-1X-5v1"/>
                     </view>
                     <navigationItem key="navigationItem" id="e13-SN-Oa8"/>
+                    <connections>
+                        <outlet property="albumImage" destination="rLm-Mg-ZoN" id="nQ6-Bl-Yao"/>
+                        <outlet property="albumNameLabel" destination="ImW-wE-alm" id="Pog-QG-Et9"/>
+                        <outlet property="tableView" destination="Iwb-qb-CS2" id="5Qp-v2-Vpq"/>
+                        <outlet property="tracksLabel" destination="X4d-1p-upK" id="elm-nh-O4H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2OZ-Qr-rNu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
