--- a/MusicApp/Storyboards/Base.lproj/Main.storyboard
+++ b/MusicApp/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Albums-->
         <scene sceneID="Yhj-sc-081">
             <objects>
-                <viewController id="KYg-Ym-UGT" customClass="AlbumViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="KYg-Ym-UGT" customClass="AlbumsViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q65-ZZ-Esl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -45,7 +45,7 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="albumCellImage" destination="1ou-tx-gzS" id="H0i-zA-Iaw"/>
+                                            <outlet property="albumImage" destination="1ou-tx-gzS" id="H0i-zA-Iaw"/>
                                             <segue destination="OP5-yH-yKn" kind="presentation" id="gTO-tF-Fe9"/>
                                         </connections>
                                     </collectionViewCell>
@@ -72,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X9y-a6-bUd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1821.7391304347827" y="134.59821428571428"/>
+            <point key="canvasLocation" x="1943" y="135"/>
         </scene>
         <!--Info Album View Controller-->
         <scene sceneID="up4-1v-ceB">
@@ -305,7 +305,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e2b-nY-hSg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3449" y="135"/>
+            <point key="canvasLocation" x="3391" y="135"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ymx-Y2-7Q8">
@@ -336,7 +336,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qnH-Uz-d4w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="911.59420289855075" y="134.59821428571428"/>
+            <point key="canvasLocation" x="1212" y="135"/>
         </scene>
     </scenes>
     <resources>
